Fixed the styling for anchors and shifted around the stylesheets

--- a/css/default.css
+++ b/css/default.css
@@ -59,15 +59,6 @@
  * \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/  */
 
 /* ------------------------------------------------------------------------- *
- * Stylesheet for anchor links
- * ------------------------------------------------------------------------- */
-
-/* Unvisited links */
-a:link {
-    color: #99c3ff;
-}
-
-/* ------------------------------------------------------------------------- *
  * Stylesheet for the entire document body
  * ------------------------------------------------------------------------- */
 
@@ -116,6 +107,21 @@ p.pronouns {
     font-size: 1.4em;
     font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
     color: #000000;
+}
+
+/* ------------------------------------------------------------------------- *
+ * Stylesheet for anchor links
+ * ------------------------------------------------------------------------- */
+
+/* _default */
+a {
+    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
+    font-size: 1.25em;
+ }
+
+/* Unvisited links */
+a:link {
+    color: #99c3ff;
 }
 
 /* ------------------------------------------------------------------------- *
